# execute-migrator

./: README.md  pyproject.toml  requirements.txt  setup.py
execute_migrator/: __main__.py
execute_migrator/migrator/: __init__.py  level.py  mcfunction.py  str.py  zip_utils.py
