[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "execute-migrator"
description = "My package description"
version = "2.1.0"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["Minecraft"]
license = {text = "MIT License"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "amulet-nbt>=2.0.0,<2.1.0",
    "amulet-core>=1.9.0,<1.10.0",
    "mcfunction-be.py@git+https://github.com/Lapis256/mcfunction-be.py.git",
]

[project.scripts]
execute_migrator = "execute_migrator.__main__:main"
